[project]
name = "stock-chart-visualization-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.5.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "langsmith>=0.4.31",
    "matplotlib>=3.10.6",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.2",
    "playwright>=1.55.0",
    "plotly>=6.3.0",
    "yfinance>=0.2.66",
]
